--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "concurrently \"npm start --prefix server\" \"npm start --prefix client\"",
     "postinstall": "npm install --prefix client && npm install --prefix server",
-    "heroku-postbuild": "npm install --prefix client && npm install --only=dev --no-shrinkwrap --prefix client && npm run build --prefix client && npm install --prefix server && npm rebuild"
+    "heroku-postbuild": "npm install && npm install --prefix client && npm install --only=dev --no-shrinkwrap --prefix client && npm run build --prefix client && npm install --prefix server && npm rebuild"
   },
   "cacheDirectories": [
     "client/node_modules",
